Bug 236946 Remove a few QIs in nsXULElement, and other cleanup. r+sr=jst